--- a/css/style.css
+++ b/css/style.css
@@ -61,14 +61,50 @@
 }
 
 
+/* Estilos para el botón del menú de hamburguesa */
 .menu-toggle {
-  display: none;
-}
-
-.menu-toggle:checked + .menu {
   display: block;
+  cursor: pointer;
+  width: 30px; /* Ajusta el ancho según sea necesario */
+  height: 20px; /* Ajusta la altura según sea necesario */
+  position: relative;
 }
 
+.menu-toggle span {
+  display: block;
+  position: absolute;
+  height: 2px;
+  width: 100%;
+  background: #000;
+  transition: transform 0.3s ease;
+}
+
+.menu-toggle span:nth-child(1) {
+  top: 0;
+}
+
+.menu-toggle span:nth-child(2) {
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.menu-toggle span:nth-child(3) {
+  bottom: 0;
+}
+
+.menu-toggle.open span:nth-child(1) {
+  transform: translateY(50%) rotate(45deg);
+}
+
+.menu-toggle.open span:nth-child(2) {
+  transform: translateY(-50%) scaleX(0);
+}
+
+.menu-toggle.open span:nth-child(3) {
+  transform: translateY(-50%) rotate(-45deg);
+}
+
+/* Estilos para el menú */
 .menu {
   display: none;
 }
@@ -87,44 +123,4 @@
       padding: 10px;
       z-index: 1000;
   }
-}
-
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  background-color: #f2f2f2;
-  color: #333;
-}
-
-.container {
-  max-width: 800px;
-  margin: 20px auto;
-  padding: 0 20px;
-  text-align: justify;
-}
-
-h1 {
-  text-align: center;
-  color: #007bff;
-  margin-bottom: 30px;
-}
-
-.team-member {
-  margin-bottom: 30px;
-  border-bottom: 1px solid #ccc;
-  padding-bottom: 20px;
-}
-
-.team-member:last-child {
-  border-bottom: none;
-}
-
-.team-member h2 {
-  color: #007bff;
-  margin-bottom: 10px;
-}
-
-.team-member p {
-  margin-bottom: 10px;
 }
