--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,130 @@
+body {
+  background-image: url('../images/fondo.png');
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+
+/* Estilos Index */
+body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  background-color: rgba(255, 255, 255, 0.8); 
+  color: #022521;
+}
+
+header {
+  display: flex;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.8); /* Fondo semi-transparente */
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin: 20px;
+
+  h1, h2 {
+    color: #022521; 
+   text-decoration: solid;
+  
+  }
+  
+  p {
+    color: #0f0f0f; 
+    font-weight: bold; 
+  
+  }
+}
+
+.logo img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%; 
+  margin-right: 100px; 
+    margin-top: 100px; 
+}
+
+
+#cart-button {
+  position: relative;
+}
+
+#cart-button img {
+  width: 30px;
+  height: auto; 
+  cursor: pointer;
+}
+
+.cart-count {
+  position: absolute;
+  top: 7px; 
+  right: -5px; 
+  background-color: red;
+  color: black;
+  border-radius: 100%;
+  padding: 4px;
+  font-size: 12px;
+}
+
+.description {
+  margin-left: 20px;
+}
+
+.description h1 {
+  margin: 0;
+  color: #333;
+  font-size: 2em;
+}
+
+.description p {
+  color: #666;
+}
+
+main {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+}
+
+section {
+  background-color: rgba(255, 255, 255, 0.8); 
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin: 20px 0;
+  width: 80%;
+  max-width: 800px;
+}
+
+section h2 {
+  margin-top: 0;
+  color: #00796b;
+}
+
+section p, section ul {
+  color: #0c0c0c; 
+}
+
+section ul {
+  list-style-type: disc;
+  padding-left: 20px;
+}
+
+footer {
+  background-color: rgba(2, 0, 121, 0.8); 
+  color: #f7f3f3; 
+  text-align: center;
+  padding: 10px;
+  width: 100%;
+  position: relative;
+  bottom: 0;
+}
+
 /* Estilos para la lista de videojuegos */
 .videojuego-list {
   display: grid;
@@ -10,9 +137,9 @@
 .videojuego-item {
   display: flex;
   flex-direction: column;
-  justify-content: center; /* Centra verticalmente los elementos hijos */
-  align-items: center; /* Centra horizontalmente los elementos hijos */
-  background-color: #fff;
+  justify-content: center; 
+  align-items: center; 
+  background-color: rgba(255, 255, 255, 0.8);
   border: 1px solid #ccc;
   border-radius: 5px;
   overflow: hidden;
@@ -22,20 +149,20 @@
 .videojuego-image {
   max-width: 80%;
   height: auto;
-  border-radius: 5px 5px 0 0; /* Redondea solo las esquinas superiores de la imagen */
+  border-radius: 5px 5px 0 0; 
 }
 
 .videojuego-item:hover {
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2); /* Ajusta el valor de la sombra según sea necesario */
-}
-.videojuego-item:hover {
-  background-color: #f0f0f0; /* Cambia el color de fondo al pasar el mouse */
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2); 
 }
 
+.videojuego-item:hover {
+  background-color: rgba(194, 247, 184, 0.8);
+}
 
 .videojuego-details {
   padding: 10px;
-  flex-grow: 1; /* Permite que el contenido se expanda verticalmente */
+  flex-grow: 1; 
 }
 
 .videojuego-title {
@@ -53,9 +180,8 @@
   font-weight: bold;
 }
 
-
 /* Estilos para el botón de compra */
-.comprar-button {
+.comprar-button, .agregar-carrito-button {
   background-color: #4CAF50;
   color: white;
   padding: 5px 10px;
@@ -64,41 +190,18 @@
   cursor: pointer;
 }
 
-.comprar-button:hover {
-  background-color: #45a049;
-}
-
-/* Media queries para responsividad */
-@media screen and (max-width: 768px) {
-  .videojuego-list {
-    grid-template-columns: 1fr; /* Cambia a una sola columna en dispositivos móviles */
-  }
-}
-
-
-/* Estilos para el botón de compra */
-.comprar-button {
-  background-color: #4CAF50;
-  color: white;
-  padding: 5px 10px;
-  border: none;
-  border-radius: 3px;
-  cursor: pointer;
-}
-
-.comprar-button:hover {
+.comprar-button:hover, .agregar-carrito-button:hover {
   background-color: #45a049;
 }
 
 /* Css para navegador */
-
 body {
   margin: 0;
   font-family: Arial, sans-serif;
 }
 
 .navbar {
-  background-color: #333;
+  background-color: #333; 
   padding: 10px 0;
   text-align: center;
   position: fixed;
@@ -121,62 +224,137 @@ body {
   background-color: #555;
 }
 
+
 h1 {
-  margin-top: 60px; /* Margen superior igual a la altura de la barra de navegación */
+  margin-top: 60px; 
   text-align: center;
 }
 
-/* Css para  nosotros.html */
+/* Css para nosotros.html */
 body {
   font-family: Arial, sans-serif;
   line-height: 1.6;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: #f9f9f9; /* Cambia el color de fondo según tu preferencia */
+  background-color: rgba(249, 249, 249, 0.8); 
 }
 
-.container {
+.container_n {
   max-width: 1200px;
   margin: 0 auto;
   padding: 20px;
-  background-color: #fff; /* Cambia el color de fondo del contenedor según tu preferencia */
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Agrega sombra al contenedor */
-  border-radius: 5px; /* Agrega bordes redondeados al contenedor */
+  background-color: rgba(255, 255, 255, 0.8);
+  box-shadow: none;  
+  border-radius: 20px; 
 }
 
+.titulo-seccion{
+  background-color: rgba(2, 0, 121, 0.8); 
+  color: #f7f3f3; 
+  text-align: center;
+  display: inline-block; 
+  padding: 10px;
+  width: 100%;
+  position: relative;
+  bottom: 10;
+}
+
+
 h1, h2 {
-  color: #333;
-  margin-bottom: 20px;
+  color: #3700ff; 
+  text-decoration: solid;
 }
 
 p {
-  color: #666;
-  margin-bottom: 20px;
+  color: #0f0f0f;
+  font-weight: bold;
 }
 
 .team-member {
-  border-bottom: 1px solid #ccc;
-  padding-bottom: 20px;
-  margin-bottom: 20px;
-}
-
-.team-member:last-child {
-  border-bottom: none;
-}
-.team-member h2 {
-  font-weight: bold; /* Texto en negritas */
+  max-width: 900px;
+  margin: 0 auto 20px; /* Añade margen inferior para espacio entre miembros */
+  background-color: rgba(255, 255, 255, 0.8);
+  box-shadow: none;  
+  border-radius: 20px; 
   display: flex;
-  align-items: center;
+  padding: 20px;
 }
 
-.team-member h2::before {
-  content: '•'; /* Círculo para las fotos */
-  margin-right: 10px;
+.team-member .image-container {
+  margin-right: 20px;
+  flex-shrink: 0; /* Evita que la imagen se reduzca */
 }
 
 .team-member img {
-  width: 100px; /* Ajusta el tamaño de la imagen según sea necesario */
-  border-radius: 50%; /* Borde redondeado para la imagen */
+  width: 100px; 
+  border-radius: 50%; 
+}
+
+.team-member .info {
+  display: flex;
+  flex-direction: column; /* Coloca h2 y p en columna */
+  justify-content: center; /* Centra verticalmente el contenido */
+}
+
+.team-member h2 {
+  font-weight: bold; 
+  margin: 20px;/* Elimina margen para mejor alineación */
+}
+
+.team-member p {
+  margin: 0px 20px 0; /* Añade un margen superior para separar del h2 */
+}
+
+/* Estilos para la página de pago */
+/* Estilo para el contenedor principal de pago */
+.pago-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin-bottom: 20px;
+}
+
+/* Estilo para la columna izquierda (detalles de la compra) */
+.columna-izquierda {
+  flex: 1;
   margin-right: 20px;
+}
+
+.columna-derecha {
+  flex: 1;
+}
+
+.producto-detalle {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+  background-color: rgba(255, 255, 255, 0.1); 
+  padding: 10px;
+  border-radius: 5px;
+}
+
+/* Estilo para el formulario de pago */
+.formulario-pago {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 10px;
+  background-color: rgba(255, 255, 255, 0.1); 
+  padding: 20px;
+  border-radius: 5px;
+}
+
+/* Estilo para el botón de pago */
+.formulario-pago button {
+  grid-column: span 2;
+  padding: 10px;
+  background-color: #fff; 
+  color: #333; 
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.formulario-pago button:hover {
+  background-color: #f0f0f0; 
 }
