--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,6 @@ body {
   background-attachment: fixed;
   background-size: cover;
 }
-
-
 /* Estilos Index */
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -18,13 +16,13 @@ body {
 }
 
 header {
-  display: flex;
-  align-items: center;
-  background-color: rgba(255, 255, 255, 0.8); /* Fondo semi-transparente */
+  background-color: rgba(255, 255, 255, 0.8); 
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  margin: 20px;
+  margin: 20px auto;
+  width: 80%;
+  max-width: 800px;
 
   h1, h2 {
     color: #022521; 
@@ -40,13 +38,16 @@ header {
 }
 
 .logo img {
-  width: 100px;
-  height: 100px;
+  width: 10%; /* Tamaño relativo */
+  height: 10%;
   border-radius: 50%; 
-  margin-right: 100px; 
-    margin-top: 100px; 
+  margin-right: 5%; /* Margen relativo */
 }
 
+.intro {
+  flex-grow: 0; /* Para que ocupe el espacio restante */
+  
+}
 
 #cart-button {
   position: relative;
@@ -88,7 +89,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px;
+  padding: 0;
 }
 
 section {
@@ -125,12 +126,36 @@ footer {
   bottom: 0;
 }
 
+@media screen and (max-width: 768px) {
+  header, section {
+    text-align: center; /* Centra el texto dentro del header y las secciones */
+  }
+
+  header {
+    flex-direction: column; /* Cambia a dirección de columna en pantallas pequeñas */
+    align-items: center; /* Centra los elementos */
+    justify-content: center; /* Centra verticalmente */
+  }
+
+  .logo img {
+    width: 30%; /* Tamaño relativo */
+    margin-right: 0; /* Sin margen en pantallas pequeñas */
+    margin-top: 20px; /* Ajusta el margen superior */
+  }
+
+  .intro {
+    margin-top: 20px; /* Ajusta el margen superior */
+  }
+}
+
+
+
 /* Estilos para la lista de videojuegos */
 .videojuego-list {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-gap: 20px;
-  margin-top: 20px;
+  margin-top: 80px; /* Ajuste del margen superior para compensar la altura del navbar */
 }
 
 /* Estilos para cada elemento de videojuego */
@@ -194,10 +219,63 @@ footer {
   background-color: #45a049;
 }
 
-/* Css para navegador */
+.navbar {
+  background-color: #333; 
+  padding: 10px 0;
+  text-align: center;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 1000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav-item {
+  color: #fff;
+  text-decoration: none;
+  padding: 5px 10px; /* Reducido el padding para dispositivos pequeños */
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+  margin: 0 5px; /* Reducido el margen para dispositivos pequeños */
+  display: inline-block;
+  font-size: 14px; /* Tamaño de fuente reducido para dispositivos pequeños */
+}
+
+.nav-item:hover {
+  background-color: #555;
+}
+
+.logo {
+  margin-right: 20px;
+}
+
+.logo img {
+  width: 50px;
+  height: auto;
+}
+
+@media screen and (max-width: 768px) {
+  .nav-item {
+    padding: 3px 8px; /* Ajuste adicional en el padding para dispositivos pequeños */
+    margin: 0 3px; /* Ajuste adicional en el margen para dispositivos pequeños */
+    font-size: 12px; /* Tamaño de fuente aún más reducido para dispositivos pequeños */
+  }
+
+  .videojuego-list {
+    margin-top: 60px; /* Ajuste del margen superior más pequeño para dispositivos móviles */
+  }
+}
+
+/* Css para nosotros.html */
 body {
-  margin: 0;
   font-family: Arial, sans-serif;
+  line-height: 1.6;
+  margin: 60px 0 0; /* Añade un margen superior igual a la altura del navbar */
+  padding: 0;
+  box-sizing: border-box;
+  background-color: rgba(249, 249, 249, 0.8); 
 }
 
 .navbar {
@@ -208,36 +286,33 @@ body {
   width: 100%;
   top: 0;
   z-index: 1000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .nav-item {
   color: #fff;
   text-decoration: none;
-  padding: 5px 15px;
+  padding: 5px 10px; 
   border-radius: 5px;
   transition: background-color 0.3s ease;
-  margin: 0 10px;
+  margin: 0 5px; 
   display: inline-block;
+  font-size: 14px; 
 }
 
 .nav-item:hover {
   background-color: #555;
 }
 
-
-h1 {
-  margin-top: 60px; 
-  text-align: center;
+.logo {
+  margin-right: 20px;
 }
 
-/* Css para nosotros.html */
-body {
-  font-family: Arial, sans-serif;
-  line-height: 1.6;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  background-color: rgba(249, 249, 249, 0.8); 
+.logo img {
+  width: 50px;
+  height: auto;
 }
 
 .container_n {
@@ -273,7 +348,7 @@ p {
 
 .team-member {
   max-width: 900px;
-  margin: 0 auto 20px; /* Añade margen inferior para espacio entre miembros */
+  margin: 0 auto 20px; 
   background-color: rgba(255, 255, 255, 0.8);
   box-shadow: none;  
   border-radius: 20px; 
@@ -283,7 +358,7 @@ p {
 
 .team-member .image-container {
   margin-right: 20px;
-  flex-shrink: 0; /* Evita que la imagen se reduzca */
+  flex-shrink: 0; 
 }
 
 .team-member img {
@@ -293,21 +368,22 @@ p {
 
 .team-member .info {
   display: flex;
-  flex-direction: column; /* Coloca h2 y p en columna */
-  justify-content: center; /* Centra verticalmente el contenido */
+  flex-direction: column; 
+  justify-content: center; 
 }
 
 .team-member h2 {
   font-weight: bold; 
-  margin: 20px;/* Elimina margen para mejor alineación */
+  margin: 20px;
 }
 
 .team-member p {
-  margin: 0px 20px 0; /* Añade un margen superior para separar del h2 */
+  margin: 0px 20px 0; 
 }
 
+
+
 /* Estilos para la página de pago */
-/* Estilo para el contenedor principal de pago */
 .pago-container {
   display: flex;
   justify-content: space-between;
