--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,8 @@
+/* Global Styles */
 body {
   background-image: url('../images/fondo.png');
   background-attachment: fixed;
   background-size: cover;
-}
-/* Estilos Index */
-body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin: 0;
   padding: 0;
@@ -23,30 +21,30 @@ header {
   margin: 20px auto;
   width: 80%;
   max-width: 800px;
+  text-align: center; /* Center the text in the header */
+}
 
-  h1, h2 {
-    color: #022521; 
-   text-decoration: solid;
-  
-  }
-  
-  p {
-    color: #0f0f0f; 
-    font-weight: bold; 
-  
-  }
+header .intro h1 {
+  color: #022521; 
+  text-decoration: solid;
+  margin: 0; /* Remove default margin */
+}
+
+header p {
+  color: #0f0f0f; 
+  font-weight: bold;
+  margin-top: 20px; /* Add space between h1 and p */
 }
 
 .logo img {
-  width: 10%; /* Tamaño relativo */
+  width: 10%; 
   height: 10%;
   border-radius: 50%; 
-  margin-right: 5%; /* Margen relativo */
+  margin-right: 5%; 
 }
 
 .intro {
-  flex-grow: 0; /* Para que ocupe el espacio restante */
-  
+  flex-grow: 0; 
 }
 
 #cart-button {
@@ -118,7 +116,7 @@ section ul {
 
 footer {
   background-color: rgba(88, 85, 247, 0.8); 
-  color: #f7f3f3; 
+  color: #fff; /* Change the footer text color to white */
   text-align: center;
   padding: 10px;
   width: 100%;
@@ -128,37 +126,35 @@ footer {
 
 @media screen and (max-width: 768px) {
   header, section {
-    text-align: center; /* Centra el texto dentro del header y las secciones */
+    text-align: center; /* Center the text inside the header and sections */
   }
 
   header {
-    flex-direction: column; /* Cambia a dirección de columna en pantallas pequeñas */
-    align-items: center; /* Centra los elementos */
-    justify-content: center; /* Centra verticalmente */
+    flex-direction: column; /* Change to column direction on small screens */
+    align-items: center; /* Center elements */
+    justify-content: center; /* Center vertically */
   }
 
   .logo img {
-    width: 30%; /* Tamaño relativo */
-    margin-right: 0; /* Sin margen en pantallas pequeñas */
-    margin-top: 20px; /* Ajusta el margen superior */
+    width: 30%; /* Relative size */
+    margin-right: 0; /* No margin on small screens */
+    margin-top: 20px; /* Adjust top margin */
   }
 
   .intro {
-    margin-top: 20px; /* Ajusta el margen superior */
+    margin-top: 20px; /* Adjust top margin */
   }
 }
 
-
-
-/* Estilos para la lista de videojuegos */
+/* Styles for the video game list */
 .videojuego-list {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-gap: 20px;
-  margin-top: 80px; /* Ajuste del margen superior para compensar la altura del navbar */
+  margin-top: 80px; /* Adjust top margin to compensate for navbar height */
 }
 
-/* Estilos para cada elemento de videojuego */
+/* Styles for each video game item */
 .videojuego-item {
   display: flex;
   flex-direction: column;
@@ -179,9 +175,6 @@ footer {
 
 .videojuego-item:hover {
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2); 
-}
-
-.videojuego-item:hover {
   background-color: rgba(194, 247, 184, 0.8);
 }
 
@@ -205,7 +198,7 @@ footer {
   font-weight: bold;
 }
 
-/* Estilos para el botón de compra */
+/* Styles for the buy button */
 .comprar-button, .agregar-carrito-button {
   background-color: #4CAF50;
   color: white;
@@ -235,12 +228,12 @@ footer {
 .nav-item {
   color: #fff;
   text-decoration: none;
-  padding: 5px 10px; /* Reducido el padding para dispositivos pequeños */
+  padding: 5px 10px; /* Reduced padding for small devices */
   border-radius: 5px;
   transition: background-color 0.3s ease;
-  margin: 0 5px; /* Reducido el margen para dispositivos pequeños */
+  margin: 0 5px; /* Reduced margin for small devices */
   display: inline-block;
-  font-size: 14px; /* Tamaño de fuente reducido para dispositivos pequeños */
+  font-size: 14px; /* Reduced font size for small devices */
 }
 
 .nav-item:hover {
@@ -258,21 +251,21 @@ footer {
 
 @media screen and (max-width: 768px) {
   .nav-item {
-    padding: 3px 8px; /* Ajuste adicional en el padding para dispositivos pequeños */
-    margin: 0 3px; /* Ajuste adicional en el margen para dispositivos pequeños */
-    font-size: 12px; /* Tamaño de fuente aún más reducido para dispositivos pequeños */
+    padding: 3px 8px; /* Further adjust padding for small devices */
+    margin: 0 3px; /* Further adjust margin for small devices */
+    font-size: 12px; /* Further reduce font size for small devices */
   }
 
   .videojuego-list {
-    margin-top: 60px; /* Ajuste del margen superior más pequeño para dispositivos móviles */
+    margin-top: 60px; /* Adjust top margin for mobile devices */
   }
 }
 
-/* Css para nosotros.html */
+/* Styles for nosotros.html */
 body {
   font-family: Arial, sans-serif;
   line-height: 1.6;
-  margin: 60px 0 0; /* Añade un margen superior igual a la altura del navbar */
+  margin: 60px 0 0; /* Add a top margin equal to the navbar height */
   padding: 0;
   box-sizing: border-box;
   background-color: rgba(249, 249, 249, 0.8); 
@@ -335,7 +328,6 @@ body {
   bottom: 10;
 }
 
-
 h1, h2 {
   color: #3700ff; 
   text-decoration: solid;
@@ -381,9 +373,7 @@ p {
   margin: 0px 20px 0; 
 }
 
-
-
-/* Estilos para la página de pago */
+/* Styles for the payment page */
 .pago-container {
   display: flex;
   justify-content: space-between;
@@ -391,7 +381,7 @@ p {
   margin-bottom: 20px;
 }
 
-/* Estilo para la columna izquierda (detalles de la compra) */
+/* Style for the left column (purchase details) */
 .columna-izquierda {
   flex: 1;
   margin-right: 20px;
@@ -410,7 +400,7 @@ p {
   border-radius: 5px;
 }
 
-/* Estilo para el formulario de pago */
+/* Style for the payment form */
 .formulario-pago {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -420,7 +410,7 @@ p {
   border-radius: 5px;
 }
 
-/* Estilo para el botón de pago */
+/* Style for the payment button */
 .formulario-pago button {
   grid-column: span 2;
   padding: 10px;
