--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,10 @@
-/* Global Styles */
 body {
   background-image: url('../images/fondo.png');
   background-attachment: fixed;
   background-size: cover;
+}
+/* Estilos Index */
+body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin: 0;
   padding: 0;
@@ -21,19 +23,18 @@ header {
   margin: 20px auto;
   width: 80%;
   max-width: 800px;
-  text-align: center; /* Center the text in the header */
-}
 
-header .intro h1 {
-  color: #022521; 
-  text-decoration: solid;
-  margin: 0; /* Remove default margin */
-}
-
-header p {
-  color: #0f0f0f; 
-  font-weight: bold;
-  margin-top: 20px; /* Add space between h1 and p */
+  h1, h2 {
+    color: #022521; 
+   text-decoration: solid;
+  
+  }
+  
+  p {
+    color: #0f0f0f; 
+    font-weight: bold; 
+  
+  }
 }
 
 .logo img {
@@ -45,6 +46,8 @@ header p {
 
 .intro {
   flex-grow: 0; 
+  align-self: center;
+  
 }
 
 #cart-button {
@@ -116,7 +119,7 @@ section ul {
 
 footer {
   background-color: rgba(88, 85, 247, 0.8); 
-  color: #fff; /* Change the footer text color to white */
+  color: #f7f3f3; 
   text-align: center;
   padding: 10px;
   width: 100%;
@@ -126,35 +129,37 @@ footer {
 
 @media screen and (max-width: 768px) {
   header, section {
-    text-align: center; /* Center the text inside the header and sections */
+    text-align: center; /* Centra el texto dentro del header y las secciones */
   }
 
   header {
-    flex-direction: column; /* Change to column direction on small screens */
-    align-items: center; /* Center elements */
-    justify-content: center; /* Center vertically */
+    flex-direction: column; /* Cambia a dirección de columna en pantallas pequeñas */
+    align-items: center; /* Centra los elementos */
+    justify-content: center; /* Centra verticalmente */
   }
 
   .logo img {
-    width: 30%; /* Relative size */
-    margin-right: 0; /* No margin on small screens */
-    margin-top: 20px; /* Adjust top margin */
+    width: 30%; /* Tamaño relativo */
+    margin-right: 0; /* Sin margen en pantallas pequeñas */
+    margin-top: 20px; /* Ajusta el margen superior */
   }
 
   .intro {
-    margin-top: 20px; /* Adjust top margin */
+    margin-top: 20px; /* Ajusta el margen superior */
   }
 }
 
-/* Styles for the video game list */
+
+
+/* Estilos para la lista de videojuegos */
 .videojuego-list {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-gap: 20px;
-  margin-top: 80px; /* Adjust top margin to compensate for navbar height */
+  margin-top: 80px; /* Ajuste del margen superior para compensar la altura del navbar */
 }
 
-/* Styles for each video game item */
+/* Estilos para cada elemento de videojuego */
 .videojuego-item {
   display: flex;
   flex-direction: column;
@@ -175,6 +180,9 @@ footer {
 
 .videojuego-item:hover {
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2); 
+}
+
+.videojuego-item:hover {
   background-color: rgba(194, 247, 184, 0.8);
 }
 
@@ -198,7 +206,7 @@ footer {
   font-weight: bold;
 }
 
-/* Styles for the buy button */
+/* Estilos para el botón de compra */
 .comprar-button, .agregar-carrito-button {
   background-color: #4CAF50;
   color: white;
@@ -228,12 +236,12 @@ footer {
 .nav-item {
   color: #fff;
   text-decoration: none;
-  padding: 5px 10px; /* Reduced padding for small devices */
+  padding: 5px 10px; /* Reducido el padding para dispositivos pequeños */
   border-radius: 5px;
   transition: background-color 0.3s ease;
-  margin: 0 5px; /* Reduced margin for small devices */
+  margin: 0 5px; /* Reducido el margen para dispositivos pequeños */
   display: inline-block;
-  font-size: 14px; /* Reduced font size for small devices */
+  font-size: 14px; /* Tamaño de fuente reducido para dispositivos pequeños */
 }
 
 .nav-item:hover {
@@ -251,21 +259,21 @@ footer {
 
 @media screen and (max-width: 768px) {
   .nav-item {
-    padding: 3px 8px; /* Further adjust padding for small devices */
-    margin: 0 3px; /* Further adjust margin for small devices */
-    font-size: 12px; /* Further reduce font size for small devices */
+    padding: 3px 8px; /* Ajuste adicional en el padding para dispositivos pequeños */
+    margin: 0 3px; /* Ajuste adicional en el margen para dispositivos pequeños */
+    font-size: 12px; /* Tamaño de fuente aún más reducido para dispositivos pequeños */
   }
 
   .videojuego-list {
-    margin-top: 60px; /* Adjust top margin for mobile devices */
+    margin-top: 60px; /* Ajuste del margen superior más pequeño para dispositivos móviles */
   }
 }
 
-/* Styles for nosotros.html */
+/* Css para nosotros.html */
 body {
   font-family: Arial, sans-serif;
   line-height: 1.6;
-  margin: 60px 0 0; /* Add a top margin equal to the navbar height */
+  margin: 60px 0 0; /* Añade un margen superior igual a la altura del navbar */
   padding: 0;
   box-sizing: border-box;
   background-color: rgba(249, 249, 249, 0.8); 
@@ -328,6 +336,7 @@ body {
   bottom: 10;
 }
 
+
 h1, h2 {
   color: #3700ff; 
   text-decoration: solid;
@@ -373,7 +382,9 @@ p {
   margin: 0px 20px 0; 
 }
 
-/* Styles for the payment page */
+
+
+/* Estilos para la página de pago */
 .pago-container {
   display: flex;
   justify-content: space-between;
@@ -381,7 +392,7 @@ p {
   margin-bottom: 20px;
 }
 
-/* Style for the left column (purchase details) */
+/* Estilo para la columna izquierda (detalles de la compra) */
 .columna-izquierda {
   flex: 1;
   margin-right: 20px;
@@ -400,7 +411,7 @@ p {
   border-radius: 5px;
 }
 
-/* Style for the payment form */
+/* Estilo para el formulario de pago */
 .formulario-pago {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -410,7 +421,7 @@ p {
   border-radius: 5px;
 }
 
-/* Style for the payment button */
+/* Estilo para el botón de pago */
 .formulario-pago button {
   grid-column: span 2;
   padding: 10px;
