--- a/css/style.css
+++ b/css/style.css
@@ -382,57 +382,41 @@ p {
   margin: 0px 20px 0; 
 }
 
-/* Pagp */
-  
-  #finalizar-compra {
-    padding: 12px 24px;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
-    transition: background-color 0.3s;
-    font-size: 16px; /* Tamaño de fuente ajustado */
-  }
-  
-  #finalizar-compra:hover {
-    background-color: #45a049;
-  }
-  
-  form#payment-form {
-    margin-top: 20px;
-    background-color: #fafafa;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  }
-  
-  form#payment-form label {
-    display: block;
-    margin-bottom: 8px;
-    color: #333;
-  }
-  
-  form#payment-form input[type="text"] {
-    width: calc(100% - 20px);
-    padding: 12px;
-    margin-bottom: 15px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
-  }
-  
-  form#payment-form input[type="text"]:focus {
-    border-color: #4CAF50;
-    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1), 0 0 8px rgba(0, 121, 107, 0.2);
-  }
-  
-  @media screen and (max-width: 768px) {
-    .nav-item {
-      padding: 8px 16px;
-      margin: 0 5px;
-      font-size: 14px;
-    }
+/* Pago */
+#carrito-lista {
+  margin-bottom: 20px;
+}
 
+#total-container {
+  margin-bottom: 20px;
+}
 
+#payment-form {
+  display: flex;
+  flex-direction: column;
+}
 
+#payment-form label {
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+#payment-form input {
+  margin-bottom: 15px;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+
+#finalizar-compra {
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+#finalizar-compra:hover {
+  background-color: #45a049;
+}
