--- a/css/style.css
+++ b/css/style.css
@@ -383,6 +383,15 @@ p {
 }
 
 /* Pago */
+
+.container_p{
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: rgba(255, 255, 255, 0.8);
+  box-shadow: none;  
+  border-radius: 20px; 
+
 #carrito-lista {
   margin-bottom: 20px;
 }
