--- a/css/style.css
+++ b/css/style.css
@@ -1,49 +1,53 @@
-/* Estilo general */
 body {
   background-image: url('../images/fondo.png');
   background-attachment: fixed;
   background-size: cover;
+}
+/* Estilos Index */
+body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin: 0;
   padding: 0;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(255, 255, 255, 0.8); 
   color: #022521;
 }
 
-/* Estilos Index */
 header {
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(255, 255, 255, 0.8); 
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   margin: 20px auto;
   width: 80%;
   max-width: 800px;
-}
 
-header h1, header h2 {
-  color: #022521;
-  text-decoration: solid;
-}
-
-header p {
-  color: #0f0f0f;
-  font-weight: bold;
+  h1, h2 {
+    color: #022521; 
+   text-decoration: solid;
+  
+  }
+  
+  p {
+    color: #0f0f0f; 
+    font-weight: bold; 
+  
+  }
 }
 
 .logo img {
-  width: 10%;
+  width: 10%; 
   height: 10%;
-  border-radius: 50%;
-  margin-right: 5%;
+  border-radius: 50%; 
+  margin-right: 5%; 
 }
 
 .intro {
-  flex-grow: 0;
+  flex-grow: 0; 
   align-self: center;
+  
 }
 
 #cart-button {
@@ -52,14 +56,14 @@ header p {
 
 #cart-button img {
   width: 30px;
-  height: auto;
+  height: auto; 
   cursor: pointer;
 }
 
 .cart-count {
   position: absolute;
-  top: 7px;
-  right: -5px;
+  top: 7px; 
+  right: -5px; 
   background-color: red;
   color: black;
   border-radius: 100%;
@@ -90,7 +94,7 @@ main {
 }
 
 section {
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(255, 255, 255, 0.8); 
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -105,7 +109,7 @@ section h2 {
 }
 
 section p, section ul {
-  color: #0c0c0c;
+  color: #0c0c0c; 
 }
 
 section ul {
@@ -114,8 +118,8 @@ section ul {
 }
 
 footer {
-  background-color: rgba(88, 85, 247, 0.8);
-  color: #f7f3f3;
+  background-color: rgba(88, 85, 247, 0.8); 
+  color: #f7f3f3; 
   text-align: center;
   padding: 10px;
   width: 100%;
@@ -145,6 +149,8 @@ footer {
   }
 }
 
+
+
 /* Estilos para la lista de videojuegos */
 .videojuego-list {
   display: grid;
@@ -157,8 +163,8 @@ footer {
 .videojuego-item {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: center; 
+  align-items: center; 
   background-color: rgba(255, 255, 255, 0.8);
   border: 1px solid #ccc;
   border-radius: 5px;
@@ -169,17 +175,20 @@ footer {
 .videojuego-image {
   max-width: 80%;
   height: auto;
-  border-radius: 5px 5px 0 0;
+  border-radius: 5px 5px 0 0; 
 }
 
 .videojuego-item:hover {
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2); 
+}
+
+.videojuego-item:hover {
   background-color: rgba(194, 247, 184, 0.8);
 }
 
 .videojuego-details {
   padding: 10px;
-  flex-grow: 1;
+  flex-grow: 1; 
 }
 
 .videojuego-title {
@@ -212,7 +221,7 @@ footer {
 }
 
 .navbar {
-  background-color: #333;
+  background-color: #333; 
   padding: 10px 0;
   text-align: center;
   position: fixed;
@@ -261,28 +270,75 @@ footer {
 }
 
 /* Css para nosotros.html */
+body {
+  font-family: Arial, sans-serif;
+  line-height: 1.6;
+  margin: 60px 0 0; /* Añade un margen superior igual a la altura del navbar */
+  padding: 0;
+  box-sizing: border-box;
+  background-color: rgba(249, 249, 249, 0.8); 
+}
+
+.navbar {
+  background-color: #333; 
+  padding: 10px 0;
+  text-align: center;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 1000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav-item {
+  color: #fff;
+  text-decoration: none;
+  padding: 5px 10px; 
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+  margin: 0 5px; 
+  display: inline-block;
+  font-size: 14px; 
+}
+
+.nav-item:hover {
+  background-color: #555;
+}
+
+.logo {
+  margin-right: 20px;
+}
+
+.logo img {
+  width: 50px;
+  height: auto;
+}
+
 .container_n {
   max-width: 1200px;
   margin: 0 auto;
   padding: 20px;
   background-color: rgba(255, 255, 255, 0.8);
-  box-shadow: none;
-  border-radius: 20px;
+  box-shadow: none;  
+  border-radius: 20px; 
 }
 
-.titulo-seccion {
-  background-color: rgba(2, 0, 121, 0.8);
-  color: #f7f3f3;
+.titulo-seccion{
+  background-color: rgba(2, 0, 121, 0.8); 
+  color: #f7f3f3; 
   text-align: center;
-  display: inline-block;
+  display: inline-block; 
   padding: 10px;
   width: 100%;
   position: relative;
   bottom: 10;
 }
 
+
 h1, h2 {
-  color: #3700ff;
+  color: #3700ff; 
   text-decoration: solid;
 }
 
@@ -293,37 +349,37 @@ p {
 
 .team-member {
   max-width: 900px;
-  margin: 0 auto 20px;
+  margin: 0 auto 20px; 
   background-color: rgba(255, 255, 255, 0.8);
-  box-shadow: none;
-  border-radius: 20px;
+  box-shadow: none;  
+  border-radius: 20px; 
   display: flex;
   padding: 20px;
 }
 
 .team-member .image-container {
   margin-right: 20px;
-  flex-shrink: 0;
+  flex-shrink: 0; 
 }
 
 .team-member img {
-  width: 100px;
-  border-radius: 50%;
+  width: 100px; 
+  border-radius: 50%; 
 }
 
 .team-member .info {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: column; 
+  justify-content: center; 
 }
 
 .team-member h2 {
-  font-weight: bold;
+  font-weight: bold; 
   margin: 20px;
 }
 
 .team-member p {
-  margin: 0px 20px 0;
+  margin: 0px 20px 0; 
 }
 
 /* Pago */
@@ -364,4 +420,3 @@ p {
 #finalizar-compra:hover {
   background-color: #45a049;
 }
-
